<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pexels_francesco_ungaro_281260">

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="0dp"
        android:layout_height="87dp"
        android:text="City"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/now"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="false"
        android:text="@string/now"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/tvCityName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintHeight_percent=".05" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFeelsLikeTemperature">

        <!-- Row 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="104dp"
                    android:layout_gravity="center"
                    android:src="@drawable/humidity" />

                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="104dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_wind" />

                <TextView
                    android:id="@+id/tvWindSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/wind_speed"
                    android:textAlignment="center"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>
        </TableRow>

        <!-- Row 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="104dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_sunrise" />

                <TextView
                    android:id="@+id/tvSunriseTime"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/sunrise_time"
                    android:textAlignment="center"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="104dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_sunset" />

                <TextView
                    android:id="@+id/tvSunsetTime"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/sunset_time"
                    android:textAlignment="center"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>
        </TableRow>
    </TableLayout>


    <TextView
        android:id="@+id/tvFeelsLikeTemperature"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Feels like"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/tvMinMaxTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCityName"
        app:layout_constraintVertical_bias="0.78"
        app:layout_constraintWidth_percent="1" />

    <TextView
        android:id="@+id/tvMinMaxTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/min_max_temperature"
        android:textAlignment="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCityName"
        app:layout_constraintVertical_bias="0.776"
        app:layout_constraintWidth_percent="1" />

    <Button
        android:id="@+id/save"
        android:layout_width="296dp"
        android:layout_height="97dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerViewSP"
        android:name="edu.fz.cs411.weatherapp.exit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentac"
        android:name="edu.fz.cs411.weatherapp.units"
        android:layout_width="34dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />


</androidx.constraintlayout.widget.ConstraintLayout>